# rust-hackathon

./: Cargo.toml  README.md  db.sqlite3
python/: hello.py
src/: main.rs
src/api/: article.rs  mod.rs  user.rs
src/db/: mod.rs
src/frontend/: mod.rs
src/models/: mod.rs
templates/: add_user.html  articles.html  base.html  users.html
