[package]
name = "rust-hackathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros", "query", "multipart", "headers"] }
axum_typed_multipart = "0.9.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "macros", "sqlx-sqlite"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
